--- a/tmux.conf
+++ b/tmux.conf
@@ -15,6 +15,8 @@ setw -g pane-base-index 1
 # Prefix Key Bindings
 bind r source-file ~/.tmux.conf \; display "Reloaded tmux config!"
 
+bind -T copy-mode-vi y copy-pipe-and-cancel "tmux save-buffer - | bclip"
+
 bind -r M-k select-pane -U
 bind -r M-j select-pane -D
 bind -r M-h select-pane -L
@@ -45,9 +47,9 @@ setw -g window-status-current-style fg=white,bold,bg=green
 setw -g pane-border-style fg=green,bg=black
 setw -g pane-active-border-style fg=white,bg=yellow
 
-set -g status-right "#[fg=cyan]%d %b %R"
+set -g status-right "#{?window_zoomed_flag,🔍, } | #[fg=cyan]%d %b %R"
 set -g status-left-length 40
-set -g status-left "#[fg=green]Session: #S #[fg=yellow]#I #[fg=cyan]#P"
+set -g status-left "#[fg=green]#S:  #[fg=yellow]#I #[fg=cyan]#P"
 set -g status-interval 60
 set -g status-justify centre
 
