Updates to config

--- a/tmux.conf
+++ b/tmux.conf
@@ -1,21 +1,21 @@
 set -g default-terminal "screen-256color"
 
-set -g prefix M-f
-bind M-f send-prefix
+set -g prefix M-c
+bind M-c send-prefix
 unbind C-b
 
 set -g base-index 1
+
 set -s escape-time 1
 
 set-option -g repeat-time 0
+set-option -g history-limit 10000
 
 set-window-option -g mode-keys vi
 setw -g pane-base-index 1
 
 # Prefix Key Bindings
 bind r source-file ~/.tmux.conf \; display "Reloaded tmux config!"
-
-bind -T copy-mode-vi y copy-pipe-and-cancel "tmux save-buffer - | bclip"
 
 bind -r M-k select-pane -U
 bind -r M-j select-pane -D
@@ -38,6 +38,8 @@ bind -r C-l resize-pane -R 5
 bind v split-window -h
 bind s split-window -v
 
+bind g pipe-pane -o 'cat >>~/output.#I-$P'
+
 # Global Keybinds
 
 # Status Bar
@@ -55,4 +57,3 @@ set -g status-justify centre
 
 setw -g monitor-activity on
 set -g visual-activity on
-
