tmux: update window colors

--- a/tmux.conf
+++ b/tmux.conf
@@ -5,6 +5,7 @@ bind M-c send-prefix
 unbind C-b
 
 set -g base-index 1
+set -g mouse on
 
 set -s escape-time 1
 
@@ -43,15 +44,15 @@ bind g pipe-pane -o 'cat >>~/output.#I-$P'
 # Global Keybinds
 
 # Status Bar
-set -g status-style fg=white,bg=black
-setw -g window-status-style fg=cyan,bg=black
-setw -g window-status-current-style fg=white,bold,bg=green
-setw -g pane-border-style fg=green,bg=black
-setw -g pane-active-border-style fg=white,bg=yellow
+set -g status-style fg=white,bg=blue
+setw -g window-status-style fg='#ffffff',bg='#3333q99'
+setw -g window-status-current-style fg='#ffffff',bg='#0000ff'
+setw -g pane-border-style yellow,bg=blue
+setw -g pane-active-border-style fg=blue,bg=yellow
 
-set -g status-right "#{?window_zoomed_flag,🔍, } | #[fg=cyan]%d %b %R"
+set -g status-right "#{?window_zoomed_flag,🔍, } | #[fg=white]%d %b %R"
 set -g status-left-length 40
-set -g status-left "#[fg=green]#S:  #[fg=yellow]#I #[fg=cyan]#P"
+set -g status-left "#[fg=green]#S:  #[fg=yellow]#I #[fg=white]#P"
 set -g status-interval 60
 set -g status-justify centre
 
